--- a/latihan/latihan5/css/T233040028.css
+++ b/latihan/latihan5/css/T233040028.css
@@ -12,7 +12,7 @@ body {
 
 .container {
   width: 500px;
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   margin: auto;
   /* overflow: hidden; */
   min-height: 100%;
@@ -116,7 +116,7 @@ body {
 }
 
 .content-title {
-  background-color: #b2b2b2;
+  background-color: #3d3c42;
   text-align: center;
   padding: 10px 0;
   margin: 5px 0;
@@ -135,11 +135,36 @@ body {
   padding-bottom: 10px;
 }
 
+.content-img {
+  position: relative;
+}
+
 .content-img img {
   width: 160px;
   height: 160px;
   margin-bottom: -12px;
   margin-bottom: -5px;
+}
+
+.content-img span {
+  display: block;
+  width: 160px;
+  height: 160px;
+  background-color: rgba(27, 26, 26, 0.5);
+  position: absolute;
+  top: 0px;
+  text-align: center;
+  line-height: 160px;
+  color: #030303;
+  text-shadow: 1px 1px 1px #ddd;
+  opacity: 0;
+  /* transform: scale(0) rotate(0); */
+  transition: 0.3s;
+}
+
+.content-img a:hover span {
+  opacity: 1;
+  /* transform: scale(1); */
 }
 
 /* Overlay */
@@ -171,6 +196,15 @@ body {
   box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.5);
 }
 
+.content-img .overlay {
+  padding-top: 230px;
+}
+
+.content-img .overlay img {
+  width: 600px;
+  height: 500px;
+}
+
 .overlay:target img {
   animation: fadeAjah 1s;
 }
@@ -184,6 +218,10 @@ body {
   text-decoration: none;
   margin-left: -10px;
   font-size: 28px;
+}
+
+.content-img .overlay .close {
+  top: 190px;
 }
 
 .overlay:target .close {
