--- a/latihan/latihan5/css/T233040028.css
+++ b/latihan/latihan5/css/T233040028.css
@@ -5,18 +5,16 @@
 
 body {
   font-family: "poppins", "Arial Narrow", arial, sans-serif;
-  /* background-color: #0f0f0f; */
   background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
-  /* height: 100vh; */
 }
 
 .container {
   width: 500px;
   background-color: #ffffff;
   margin: auto;
-  /* overflow: hidden; */
   min-height: 100%;
   max-height: 100%;
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.7);
 }
 
 .profile-header {
@@ -24,6 +22,10 @@ body {
   align-items: center;
   padding: 10px 20px 0 20px;
   position: relative;
+}
+
+.profile-header a img {
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
 
 .profile-header a img,
@@ -44,13 +46,11 @@ body {
   color: #f68084;
   text-shadow: 1px 1px 1px #ddd;
   opacity: 0;
-  /* transform: scale(0) rotate(0); */
   transition: 0.3s;
 }
 
 .profile-header a:hover span {
   opacity: 1;
-  /* transform: scale(1); */
 }
 
 .profile-header h1 {
@@ -86,6 +86,7 @@ body {
 
 .profile-history li img {
   border: 3px solid #20262e;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
 
 .profile-history li a img,
@@ -106,13 +107,11 @@ body {
   color: #20262e;
   text-shadow: 1px 1px 1px #ddd;
   opacity: 0;
-  /* transform: scale(0) rotate(0); */
   transition: 0.3s;
 }
 
 .profile-history li a:hover span {
   opacity: 1;
-  /* transform: scale(1); */
 }
 
 .content-title {
@@ -130,7 +129,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 6px;
   padding-bottom: 2px;
   padding-bottom: 10px;
 }
@@ -144,6 +143,7 @@ body {
   height: 160px;
   margin-bottom: -12px;
   margin-bottom: -5px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
 
 .content-img span {
@@ -158,13 +158,11 @@ body {
   color: #030303;
   text-shadow: 1px 1px 1px #ddd;
   opacity: 0;
-  /* transform: scale(0) rotate(0); */
   transition: 0.3s;
 }
 
 .content-img a:hover span {
   opacity: 1;
-  /* transform: scale(1); */
 }
 
 /* Overlay */
@@ -206,7 +204,7 @@ body {
 }
 
 .overlay:target img {
-  animation: fadeAjah 1s;
+  animation: slideDownFade 1s;
 }
 
 .overlay .close {
@@ -228,9 +226,11 @@ body {
   animation: slideDownFade 0.5s 0.5s forwards;
 }
 
-.overlay:target .next,
+.overlay:target .next {
+  animation: slideLeftFade 0.5s 0.5s forwards;
+}
 .overlay:target .prev {
-  animation: fadeAjah 0.5s 0.5s forwards;
+  animation: slideRightFade 0.5s 0.5s forwards;
 }
 
 /* navigasi bagian 3 */
@@ -283,5 +283,31 @@ body {
   100% {
     opacity: 1;
     margin-top: 0;
+  }
+}
+
+@keyframes slideLeftFade {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+    margin-left: -50px;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+    margin-left: 50px;
+  }
+}
+
+@keyframes slideRightFade {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+    margin-left: -50px;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+    margin-left: -50;
   }
 }
