--- a/latihan/latihan7/assets/css/L7233040028.css
+++ b/latihan/latihan7/assets/css/L7233040028.css
@@ -31,7 +31,7 @@ body {
 .hero {
   grid-area: hero;
   min-height: 350px;
-  background-image: url(assets/img/hero.jpg);
+  background-image: url(../img/hero.jpg);
   background-size: cover;
   background-position: center;
   padding: 50px;
@@ -52,14 +52,14 @@ body {
 
 .feature-1 {
   grid-area: feature-1;
-  background-image: url(assets/img/feature-1.jpg);
+  background-image: url(../img/feature-1.jpg);
   background-size: cover;
   background-position: center;
 }
 
 .feature-2 {
   grid-area: feature-2;
-  background-image: url(assets/img/feature-2.jpg);
+  background-image: url(../img/feature-2.jpg);
   background-size: cover;
   background-position: center;
 }
